@@ -36,7 +36,8 @@ Changes from 4.3.x -> 4.4-alpha
 * xymond: Fix double-free in grouplist referenced 2x in handle_status (Thanks, Franco Gasperino)
 * Fix non-special HTTP 1xx/3xx status codes red instead of yellow >.<
 * Standardize the location of "modify" messages on status pages and in mailed alerts
-
+* xymond_alert: Add --loadhostsfromxymond option, and exit if xymond is unavailable
+* xymond_alert: Reload config in response to -HUP or 'reload' message
 
 Changes from 4.3.22 -> 4.3.23 (12 Nov 2015)
 ===========================================
